# Umbra

./: .gitmodules  CMakeLists.txt  build.bat
resources/: Umbra logo.afdesign
src/: api.hpp
src/include/Umbra/: application.hpp
tests/: CMakeLists.txt
tests/helloworld/: CMakeLists.txt
tests/helloworld/src/: helloWorld.c
tests/test0/: CMakeLists.txt
tests/test0/src/: main.cpp
